# cakework

./: .gitignore  Dockerfile  LICENSE  README.md  fly.toml  go.mod  go.sum  go.work  go.work.sum
cli/: .env  .gitignore  .goreleaser.yaml  Dockerfile  Makefile  README.md  auth.go  auth.go_bak  cakework.go  fly.toml  frontend.go  frontend.go_bak  go.mod  go.mod.local  go.sum  http.go  install.sh
db/: package-lock.json  package.json  schema.prisma
examples/: .gitignore  Dockerfile  LICENSE  README.md  app.go
examples/image_generation/backend/: Dockerfile  pyproject.toml
examples/image_generation/backend/backend/: main.py
examples/image_generation/backend/tests/: bake.py
examples/react-example/react-example-backend/: Dockerfile  pyproject.toml
examples/react-example/react-example-backend/react_example_backend/: main.py
examples/react-example/react-example-backend/tests/: bake.py
fern/: README.MD  fern.config.json
fly/: fly.go
frontend/: .dockerignore  README.md  auth.go  custom_claims.go  database.go  fly.toml  go.mod  go.sum  jwt.go  log.go  main.go  middleware.go  request.go  task.go  types.go  util.go
lib/: check.go  go.mod  go.sum
poller/: README.md  fly.toml  go.mod  go.sum  main.go
sdk/python/: .gitignore  README.md  cakework.proto  pyproject.toml  requirements.txt
sdk/python/src/cakework/: __init__.py  activity_server.py  auth.py  cakework.py  cakework_pb2.py  cakework_pb2.pyi  cakework_pb2_grpc.py  client.py  exceptions.py  frontend_pb2.py  frontend_pb2.pyi  frontend_pb2_grpc.py  requirements_cakework.txt  task_server.py
(+282 files in other folders)
