[project]
name = "cakework"
version = "0.0.59"
authors = [
  { name="Jessie Young", email="jessie@cakework.com" },
]
description = "Cakework Python SDK"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
  "grpcio",
  "protobuf",
  "requests"
]

[project.urls]
"Homepage" = "https://github.com/usecakework/cakework"
"Bug Tracker" = "https://github.com/usecakework/cakework/issues"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
