[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Eric Chen <eric@sahale.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
cakework = "^0.0.45"
banana-dev = "^4.0.1"
boto3 = "^1.26.59"
nanoid = "^2.0.0"
pillow = "^9.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
